<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="be.mathias.thebible.ui.searchVerse.SearchVerseViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.searchVerse.SearchVerseFragment"
        android:padding="16dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/book_textfield_layout"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <AutoCompleteTextView
                    android:minHeight="48dp"
                    android:id="@+id/book_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:simpleItems="@array/simple_items"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:id="@+id/chapter_verse_layout"
                app:layout_constraintTop_toBottomOf="@id/book_textfield_layout"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="4dp"
                    android:hint="@string/chapter"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputEditText
                        android:minHeight="48dp"
                        android:id="@+id/chapter"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:layout_weight="1"
                    android:hint="@string/verse"
                    tools:ignore="RtlSymmetry">

                    <!--                    android:hint="@string/verse_hint"-->
                    <com.google.android.material.textfield.TextInputEditText
                        android:minHeight="48dp"
                        android:id="@+id/verse"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <Button
                android:layout_marginTop="7dp"
                app:layout_constraintTop_toBottomOf="@id/chapter_verse_layout"
                app:layout_constraintEnd_toEndOf="parent"

                android:enabled="false"
                android:id="@+id/search_verse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search" />

            <com.google.android.material.textview.MaterialTextView
                app:layout_constraintTop_toBottomOf="@id/chapter_verse_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"

                android:id="@+id/text_verse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                app:verseApiStatus="@{vm.status}"
                android:visibility="invisible"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/ic_baseline_favorite_24"
                android:contentDescription="@string/fab_content_like"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</layout>