<resources>
    <string name="app_name">The Bible</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home</string>
    <string name="second_fragment_label">Bible</string>
    <string name="favorites_fragment_label">Favorites</string>
    <string name="search_verse_fragment_label">Search Verse</string>
    <string name="next">Search</string>
    <string name="previous">Previous</string>

    <string name="favorites">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chapter">Chapter</string>
    <string name="verse">Verse</string>
    <string name="search">Search</string>
    <string name="book">Book</string>
    <string name="book_hint">book name of the bible verse</string>
    <string name="chapter_hint">Chapter number of the selected book</string>
    <string name="verse_hint">Verse number of the selected chapter</string>
    <string name="fab_content_like">Like the verse</string>
    <string name="history_verses">History of verses</string>
</resources>