...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="Bible Book"
            android:src="@drawable/ic_bible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_first" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
...
